# my_man_app

./: .env  Cargo.toml  README.md
assets/human/: index.html  style.css
info/: Problematyka_Biznesowa.docx
migrations/0_preset_db/: up.sql
migrations/2023-12-26-174145_c_tables/: down.sql  up.sql
migrations/2023-12-27-130159_c_procs/: down.sql  up.sql
migrations/2023-12-27-130209_c_triggers/: down.sql  up.sql
migrations/2023-12-27-130500_insert_arbitrary_data/: down.sql  up.sql
src/: app.rs  db.rs  init.rs  lib.rs  main.rs  models.rs  pattern.rs  schema.rs  serv.rs  util.rs
src/app/: args.rs  cmd.rs
src/app/cmd/: human.rs  serve.rs  sub.rs
src/db/: cmd.rs  data_types.rs  human.rs  table_name.rs
src/models/: human.rs  new_human.rs
src/models/new_human/: bor.rs  own.rs
src/pattern/human/: buf.rs
src/serv/: file.rs  human.rs
src/serv/human/: query.rs
