[package]
name = "mma"
authors = ["Tomasz Nehring"]
description = "My app for management of my company's database."
version = "0.1.0"
edition = "2021"


[dependencies]
# App interface.
clap = { version = "4.4.11", features = ["derive"] }
# Error handling
anyhow = "1.0.77"
# .env
dotenv_codegen = "0.15.0"
dotenvy = "0.15.7"
# Conveniences
derive_more = "0.99.17"
# Engine
diesel = { version = "2.1.4", features = ["mysql"] }
tabled = "0.15.0"
colored = "2.1.0"
actix-web = "4.6.0"
