[package]
name = "mma"
authors = ["Tomasz Nehring"]
description = "My app for management of my company's database."
version = "0.1.0"
edition = "2021"


[dependencies]
# App interface.
clap = { version = "4.4.11", features = ["derive"] }
tabled = "0.15.0"
colored = "2.1.0"
# Loggin & Error handling
anyhow = "1.0.77"
tracing = "0.1.40"
log = "0.4.21"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# Conveniences
dotenv_codegen = "0.15.0"
dotenvy = "0.15.7"
derive_more = "0.99.17"
strum = { version = "0.26.2", features = ["derive"] }
# Engine
diesel = { version = "2.1.4", features = ["mysql", "r2d2"] }
actix-web = "4.6.0"
serde = { version = "1.0.203", features = ["derive"] }
r2d2 = "0.8.10"
actix-service = "2.0.2"
