[package]
name = "mma"
authors = ["Tomasz Nehring"]
description = "My app for management of my company's database."
version = "0.1.0"
edition = "2021"


[dependencies]
# App interface.
clap = { version = "4.4.11", features = ["derive"] }
tabled = "0.15.0"
colored = "2.1.0"
handlebars = "5.1.2"
# Loggin & Error handling
anyhow = "1.0.77"
fs-err = { version = "2.11.0", features = ["tokio"] }
tracing = "0.1.40"
log = "0.4.21"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# Conveniences
dotenvy = "0.15.7"
derive_more = "0.99.17"
strum = { version = "0.26.2", features = ["derive"] }
tap = "1.0.1"
# Engine
diesel = { version = "2.1.4", features = ["mysql", "r2d2"] }
r2d2 = "0.8.10"
actix-web = "4.6.0"
# Optimisation
cached = { version = "0.51.3", features = ["async"] }
# Miscellaneous
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
